# common-angular

./: .gitlab-ci.yml  .start.sh  LICENSE  Taskfile.yml  common.app.json  common.website.json  nodemon-jest.json  package-lock.json  package.app.json.handlebars  package.json  package.website.json.handlebars  pnpm-lock.yaml  pyproject.toml  tsconfig.json  update.sh  variables.app.json  variables.json  variables.website.json
.common/: package.hbs.json
.common-app/: package.hbs.json
.common-app/.config/: variables.json
.common-website/: .gitlab-ci.yml  package.hbs.json
.common-website/.config/: variables.json
.common/.config/: variables.json
.config/: eslintcache  package-lock.json
.config/docs/: Taskfile.yml  package.json
_generated_/app/: .gitlab-ci.yml  package.hbs.json  package.json.liquid
_generated_/common/: package.hbs.json  package.json.liquid
_generated_/website/: .gitlab-ci.yml  package.hbs.json  package.json.liquid
common/: Taskfile.yml  package.json  pyproject.toml
files-app/: .start.sh  Taskfile.yml  package.json.handlebars
files-website/: .start.sh  Taskfile.yml  package.json.handlebars
local/: package-lock.json
local/slim/: exe.txt  install.txt
project/: package.hbs.json  package.json.liquid
project-app/: .gitlab-ci.yml  package.hbs.json  package.json.liquid
project-app/.boilerplate/: nx.json  package.hbs.json
project-app/.config/: variables.json
project-website/: .gitlab-ci.yml  package.hbs.json
project-website/.config/: variables.json
project/.config/: nodemon.json  variables.json
(+929 files in other folders)
